Add outpainting support for DeepFillv2
Features:
- Outpainting mask generation (all sides, random sides, fixed)
- OutpaintingDataset and MixedInpaintOutpaintDataset classes
- train_outpaint.py: Training script with mixed inpaint/outpaint support
- test_outpaint.py: Inference script for image expansion
- configs/train-outpaint.yaml: Config for outpainting fine-tuning
- scripts/download_places365.py: Dataset download helper

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,10 @@ checkpoints/
 tb_logs/
 node_modules/
 
+# Dataset (too large for git)
+data/
+weights/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
